# ChangeLog for app-text/sphinxcontrib-issuetracker
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  06 Oct 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-issuetracker-0.8.ebuild,
  sphinxcontrib-issuetracker-0.9.ebuild:
  Keyworded x86.

  06 Oct 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.9.ebuild:
  Keyworded amd64.

  26 Sep 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-issuetracker-0.7.2.ebuild,
  sphinxcontrib-issuetracker-0.8.ebuild:
  Keyworded x86.

  26 Sep 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.8.ebuild:
  Keyworded amd64.

*sphinxcontrib-issuetracker-0.9 (06 Sep 2011)

  06 Sep 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-issuetracker-0.9.ebuild:
  Version bump [465].

*sphinxcontrib-issuetracker-0.8 (27 Aug 2011)

  27 Aug 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-issuetracker-0.8.ebuild:
  Version bump [461].

  01 Aug 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.7.2.ebuild:
  Keyworded x86.

  30 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.7.2.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-issuetracker-0.7.2.ebuild:
  Keyworded ~x86.

*sphinxcontrib-issuetracker-0.7.2 (30 Jun 2011)

  30 Jun 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-issuetracker-0.7.2.ebuild, +metadata.xml, +watch:
  Initial ebuild, by me [388].
