@@ -5,7 +5,7 @@ DIST sphinxcontrib-issuetracker-0.9.tar.gz 25192 RMD160 10477ff1a98db694fff96db6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk7ApAQACgkQzJrj3cAXR0mOAACgqC/CwalRSa2gubDjPP9GDRds
-2VYAnR3hYe4gRllWgzBFSptEUKRT0+on
-=xMsa
+iEYEAREKAAYFAk9SPNEACgkQzJrj3cAXR0lflwCglSVxCnCuL+CfeJ669TDomKMz
+ReYAn0KImQgZM0HCJ/+mSHpxtcntN7Ba
+=C1Y6
 -----END PGP SIGNATURE-----
