@@ -1,6 +1,10 @@
 # ChangeLog for app-text/sphinxcontrib-issuetracker
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Mar 2012; James Rowe <jnrowe@gmail.com>
+  sphinxcontrib-issuetracker-0.9.ebuild:
+  Removed Python 2.4 support.
 
   14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
   Removed redundant herd info.
